refactor: :recycle: reduce cognitive complexity of actionPerformed function
reduce cognitive complexity of actionPerformed function and fix sonnarlint warnings